layout change & overflow view fixes

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ button:focus{
   display: grid;
   
   grid-template-columns: auto;
-  grid-template-rows: 15% 85%;
+  grid-template-rows: 100% 100%;
   /* grid-gap: 5px; */
 }
 
@@ -45,6 +45,7 @@ button:focus{
 
 #main{
   display: grid;
+  overflow: hidden;
   
   grid-template-columns: 20% auto 25%;
   grid-gap: 5px;
@@ -55,18 +56,18 @@ button:focus{
   padding: 5px;
   display: grid;
   
-  grid-template-rows: auto 10%;
+  grid-template-rows: 90% 10%;
   grid-gap: 5px;
+  overflow: hidden;
 }
 #directories{
   position: relative;
   /* border: 1px solid black; */
   margin: 0;
   padding: 5px;
-  overflow: hidden;
+
   overflow-y: scroll;
-  max-height: 76vh;
-  -ms-overflow-style: none;
+  max-height: 100%;
   scrollbar-width: none;
 }
 #directories::-webkit-scrollbar{
@@ -118,12 +119,16 @@ button:focus{
 
 /* posted items */
 #middle{
+  margin: 10px;
   padding: 10px;
   display: flex;
   flex-direction: column-reverse;
   align-self: flex-start;
+  overflow-y: scroll;
+  max-height: 95%;
   gap: 10px;
 }
+
 
 .posts{
   /* border: 1px solid black; */
@@ -132,8 +137,18 @@ button:focus{
   border-radius: 15px;
 }
 
+#sidebar-right-cover{
+  background-color: rgb(245, 245, 245);
+  overflow: hidden;
+}
 #sidebar-right{
   padding: 10px;
+
+  overflow: hidden;
+  overflow-y: scroll;
+  max-height: 100%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 
   background-color: rgb(245, 245, 245);
   display: flex;
@@ -143,6 +158,10 @@ button:focus{
   align-items: flex-start;
   row-gap: 10px;
 }
+#sidebar-right::-webkit-scrollbar{
+  display: none;
+}
+
 .side-image{
   width: 43%;
   flex-shrink: 1;
